Test/istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: litoral-puro-rj
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - hatz-d.com.br
    port:
      name: nginx
      number: 443
      protocol: HTTPS
    tls:
      credentialName: nginx-cert
      mode: SIMPLE
